Bug 271947 - PPT filter hangs while processing text
Summary: PPT filter hangs while processing text
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filter/ppt (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-29 00:06 UTC by Matus Uzak
Modified: 2011-04-29 16:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A ppt document to open with Stage (121.50 KB, application/vnd.ms-powerpoint)
2011-04-29 00:06 UTC, Matus Uzak
Details
Another ppt document to open with Stage (530.00 KB, application/vnd.ms-powerpoint)
2011-04-29 00:07 UTC, Matus Uzak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matus Uzak 2011-04-29 00:06:12 UTC
Created attachment 59405 [details]
A ppt document to open with Stage

Version:           unspecified
OS:                Linux

Filter hangs while processing TextPFRun structure.

Reproducible: Always

Steps to Reproduce:
1. Open any of the attached files with stage.

Actual Results:  
The ppt filter hangs while processing text.

Expected Results:  
Stage should display any of the attached files.  Or the filter should process the text.
Comment 1 Matus Uzak 2011-04-29 00:07:57 UTC
Created attachment 59406 [details]
Another ppt document to open with Stage

Added another attachment.
Comment 2 Matus Uzak 2011-04-29 16:34:45 UTC
Git commit c27bb94953ebcdfdd87c5daa4036d42ee329ae9c by Matus Uzak.
Committed on 29/04/2011 at 16:41.
Pushed by uzak into branch 'master'.

PPT: Ignore bookmark in calculation of the end of a text chunk.

* Bookmark are not supported at the moment, so let's keep it simple.

BUG:271947

M  +13   -11   filters/kpresenter/powerpoint/PptToOdp.cpp     

http://commits.kde.org/calligra/c27bb94953ebcdfdd87c5daa4036d42ee329ae9c