PPT: Ignore bookmark in calculation of the end of a text chunk.

* Bookmark are not supported at the moment, so let's keep it simple.

BUG:271947